# RexOne

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md
include/: llama_backend.h  memory_manager.h  model_interface.h  orchestrator.h  persistence.h  planner.h  tokenizer.h  vector_store.h
src/: llama_backend.cpp  main.cpp  memory_manager.cpp  model_interface.cpp  orchestrator.cpp  persistence.cpp  planner.cpp  tokenizer.cpp  vector_store.cpp
